0.4.5
-----
- Removed default logger configuration
- Moved GELF logger to an optional compoent
- Changed dependencies to not pull GELF in as a transitive dependency
- Fixed various docs

0.4.7
-----
- Added build-test-mock-openid-server to grab openid config and put into the
	server parser env when protocol testing. The component should be placed
	under the key :test-openid-mock and have information under :openid-mock/claims
	that gets placed in env [:request :user].
- check-response-to-client's :on-success callback now has a :remap-fn in its env
	which is a function to remap a response from real ids to the fake (keyword) ids
	eg: :datomic.id/* & :om.tempid/*
- check-response-to-client now takes an optional :which-db which is a keyword
	that specifies from which db a response originates from.
	This is because :db/id's are not unique across datomic databases.

0.4.8
-----